[package]
name = "accounting_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
uuid = {version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
dialoguer = {version = "0.10.3", features = ["fuzzy-select"]}
chrono = "0.4"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"
